Try to fix iframe width on mobiles

--- a/client/dumb/stats-row.sass
+++ b/client/dumb/stats-row.sass
@@ -1,7 +1,8 @@
 .statsRow
   width: 100%
+  max-width: 100%
   white-space: nowrap
-  overflow-x: auto
+  overflow-x: scroll
   -webkit-overflow-scrolling: touch
   margin-top: 9px
   padding: 0px 18px
